--- a/lib/dedalo/page/html/page.phtml
+++ b/lib/dedalo/page/html/page.phtml
@@ -6,7 +6,7 @@
 	<?php /*<link href="<?php echo DEDALO_LIB_BASE_URL ?>/common/css/structure.css" rel="stylesheet"> */?>
 </head>
 <body>
-	<?php echo $html_header ?>
+	<?php echo $html_header ?? '' ?>
 	<div id="main" class="hide"></div>
 	<div id="debug" class="debug hide"></div>
 </body>
