Add DocumentFragment policy to any dom items iteration and muiltiple 'appendChild'. Fix destroy issue on pagination in edit mode

--- a/lib/dedalo/common/css/buttons.less
+++ b/lib/dedalo/common/css/buttons.less
@@ -25,7 +25,7 @@
 		margin-top: 3px;
 		user-select:none;-webkit-user-select:none;
 
-		&:hover { 
+		&:hover {
 			opacity: 1;
 			background-color: #ff9439;
 			color: #000000;		}
@@ -41,7 +41,7 @@
 			}
 		}
 	}
-		
+
 
 
 // button with icon left
@@ -69,12 +69,12 @@
 			//background-image: url("../../themes/default/glyphicons-halflings.png");
 			background-image: url("../../themes/default/svg_icons.svg");
 			background-position: -360px -144px;
-			margin-right: 7px;	
+			margin-right: 7px;
 			width: 14px;
 			height: 14px;
 			/* Position/Spacing */
-		  	float: left; 
-		  	opacity: 0.5;	
+		  	float: left;
+		  	opacity: 0.5;
 		}
 		&:hover {
 			/*opacity: 0.7;*/
@@ -88,7 +88,7 @@
 
 
 
-/* ICONS BOOTSTRAP 
+/* ICONS BOOTSTRAP
 ----------------------------------------- */
 	.icon_bs {
 		display: inline-block;
@@ -102,7 +102,7 @@
 		background-position: -48px -24px;
 		background-size: 474px 184px;
 		background-repeat: no-repeat;
-		list-style: none;	
+		list-style: none;
 		position: relative;
 		/*top: -1px;*/
 		cursor: pointer;
@@ -116,10 +116,10 @@
 			opacity: 0.4
 		}
 	}
-	
+
 
 	.image_delete_icon {
-		/* background-image: url('../../../themes/default/delete.png'); 
+		/* background-image: url('../../../themes/default/delete.png');
 		width: 11px;
 		height: 13px;
 		*/
@@ -130,7 +130,7 @@
 		cursor:default !important;
 	}
 
-/* ICONS 
+/* ICONS
 ----------------------------------------- */
 	.av_video_icon {
 		background-position: -192px 0px;
@@ -145,13 +145,13 @@
 		background-position: -120px -24px;
 	}
 	.av_delete_icon {
-		//background-image: url('../../../themes/default/delete.png'); 
+		//background-image: url('../../../themes/default/delete.png');
 		//width: 11px;
-		//height: 13px;		
+		//height: 13px;
 		background-position: -456px 0px;
 	}
 	.av_generate_icon {
-		background-position: -432px 0px;	
+		background-position: -432px 0px;
 	}
 	.icon_video {
 		//background-position: initial;
@@ -159,7 +159,7 @@
 		background-position: -192px 0;
 		margin-left: 2px;
 		opacity: 0.65;
-		zoom: initial;
+		//zoom: initial;
 	}
 	.icon_transcription {
 		background-image: url("../../themes/default/tr-icon.gif");
@@ -228,7 +228,7 @@
 		background-size: 76%;
 		opacity: 0.75;
 	}
-		
+
 
 /* BUTTON Add
  * + icon
@@ -244,13 +244,13 @@
 	    -webkit-filter: brightness(0%);
 	    filter: brightness(0%);
 	}
-	
+
 
 
 /* BUTTON Close
  * X icon
 ----------------------------------------------------- */
-	.button_close {	
+	.button_close {
 		position: absolute;
 		right: 5px;
 		top: 5px;
@@ -258,9 +258,9 @@
 		//background-position: -168px -96px;
 		//background-position: -48px -96px;
 		//opacity: 0.8;
-		
+
 		.buttons_common;
-		background-image: url('../../themes/default/close.svg');	
+		background-image: url('../../themes/default/close.svg');
 	}
 
 
