--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -108,10 +108,11 @@
 				background-color: #3883fa;
 
 				>.widget_label {
-					background-color: #3275e2;
+					//background-color: #3275e2;
 				}
 				>.widget_body {
 					padding: 0;
+					background-color: #f3f3f3;
 					>.body_info {
 						padding: 0;
 					}
@@ -821,13 +822,13 @@
 					content: @fa-var-eraser;
 				}
 			}
-			&.off {
-				.fa-icon;
-				.fas;
-				&:before {
-					content: @fa-var-power-off;
-				}
-			}
+			// &.off {
+			// 	.fa-icon;
+			// 	.fas;
+			// 	&:before {
+			// 		content: @fa-var-power-off;
+			// 	}
+			// }
 			&.change_mode {
 				.fa-icon;
 				.fas;
@@ -1267,7 +1268,6 @@
 				background-color: #fcfcfc;
 				opacity: 0.7;
 				border: 1px solid #e0e0e0;
-
 			}
 
 			>form {
