--- a/lib/dedalo/page/css/layout/paginator.less
+++ b/lib/dedalo/page/css/layout/paginator.less
@@ -97,7 +97,7 @@
 				>.goto_page {
 					padding-left: 0.1em;
 
-					>input#go_to_page {
+					>input.input_go_to_page {
 						text-align: center;
 						padding: 0.25em;
 						margin-left: 0.5em;
