--- a/lib/dedalo/html_page/html/html_page_header.phtml
+++ b/lib/dedalo/html_page/html/html_page_header.phtml
@@ -30,7 +30,7 @@ if (login::is_logged()) {
 			#
 			# Quit button
 			#echo "<div id=\"quit\" class=\"glyphicon glyphicon-off link\" title=\"".label::get_label('salir')."\" onclick=\"login.Quit()\"></div>";
-			echo "<div id=\"quit\" class=\"button off link\" title=\"".label::get_label('salir')."\" onclick=\"login.quit()\"></div>";
+			echo "<div id=\"quit\" class=\"button quit link\" title=\"".label::get_label('salir')."\" onclick=\"login.quit()\"></div>";
 
 			# Toggle Menu responsive
 			echo "<div id=\"toggle_menu\" class=\"glyphicons glyphicons-show-lines link\" title=\"".label::get_label('menu')."\" onclick=\"menu.toggle_menu(this)\">=</div>";
