--- a/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
+++ b/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
@@ -20,7 +20,7 @@
 	}
 
 	.autocomplete_input{
-		
+
 		background: #fff url("../../themes/default/search.svg") right center no-repeat;
 		background-size: auto 100%;
 		background-position: bottom -1px right 5px;
@@ -76,7 +76,7 @@
 			background-size: auto 100%;
 			//background-position-x: 95%;
 			background-position: bottom -1px right 5px;
-			//transition: all .2s ease-in-out;		
+			//transition: all .2s ease-in-out;
 			//opacity: 0.5;
 
 			&:focus {
@@ -101,7 +101,7 @@
 	.autocomplete_list_button_options {
 		opacity: .3;
 		background-position: -432px 0;
-		zoom: 120%;
+		//zoom: 120%;
 		-moz-transform: scale(1.20);
 		transform-origin: bottom;
 	}
@@ -122,8 +122,8 @@
 		//margin-bottom: 5px;
 		clear: both;
 		//background-color: #cdcdcd;
-		background-color: darken(@color_selected_wrap, 5%);			
-	
+		background-color: darken(@color_selected_wrap, 5%);
+
 		&.in_search_mode {
 			padding-right: 5px;
 			//padding-left: 150px;
@@ -133,25 +133,25 @@
 
 
 // search_sections_list
-	@column_width : 33%;	
+	@column_width : 33%;
 	ul.search_sections_list {
 		display: table;
 		background-color: #8E8E8E;
-		padding: 10px;	
+		padding: 10px;
 		z-index: 1001;
 		white-space: nowrap;
 		color: #ffffff !important;
 		width: 100%;
 		top: 5px;
 	    position: relative;
-		margin-bottom: 5px;		
+		margin-bottom: 5px;
 
 		>li {
 			display: flex; // Important for text-overflow ellipsis
 			float: left;
 			width: @column_width;
 			white-space: nowrap;
-			overflow: hidden;			
+			overflow: hidden;
 
 			>input {
 				margin: 2px;
@@ -186,7 +186,7 @@
 			margin: 3px;
 			padding: 0;
 			float: left;
-		}		
+		}
 
 	}//end .search_sections_list
 
@@ -198,7 +198,7 @@
 			white-space: nowrap;
 			overflow: hidden;
 			display: flex; // Important for text-overflow ellipsis
-		}	
+		}
 		.search_sections_list input {
 			margin: 2px;
 			margin-right: 4px;
