--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -8,6 +8,14 @@ html {
 	margin-right: calc(100vw - 100%);
 }
 
+	b, strong {
+		font-weight: bold;
+	}
+
+	i, em {
+		font-style: italic;
+	}
+
 
 
 // #main
