--- a/lib/dedalo/component_autocomplete/css/component_autocomplete.less
+++ b/lib/dedalo/component_autocomplete/css/component_autocomplete.less
@@ -12,7 +12,7 @@
 	//background-color: @color_orange !important;
 	}
 	.css_wrap_autocomplete > .content_data {
-		
+
 	}
 
 
@@ -30,8 +30,8 @@
 		*/
 		//display: flex;
 		align-items: center;
-		justify-content: flex-end;		
-		position: absolute;	
+		justify-content: flex-end;
+		position: absolute;
 		right: 0;
 		top: -23px;
 		background-color: @color_selected_wrap;
@@ -53,7 +53,7 @@
 				display: none
 			}
 
-		// BTN DELETE 
+		// BTN DELETE
 		.css_autocomplete_button_delete {
 			position: relative;
 			top: 0px;
@@ -84,7 +84,7 @@
 			margin-left: 5px;
 		}
 		// BTN NEW
-		.new_autocomplete {	
+		.new_autocomplete {
 			background-position: 0 -96px;
 			opacity: 0.3;
 			margin-left: 3px;
@@ -165,7 +165,7 @@
 			border-radius: 4px;
 			margin: 3px;
 			margin-left: 15px;
-			padding: 4px;	
+			padding: 4px;
 			display: block;
 			white-space: nowrap;
 			width: 100%;
@@ -191,13 +191,13 @@
 		    opacity: 0.4;
 		}
 		.css_autocomplete_ul_edit_in_portal:hover {
-			-webkit-filter: hue-rotate(150deg) brightness(100%) saturate(2);	
+			-webkit-filter: hue-rotate(150deg) brightness(100%) saturate(2);
 			filter: hue-rotate(150deg) brightness(100%) saturate(2);
 			cursor: pointer;
 			opacity: 0.8;
 		}
 
-	
+
 
 	.css_autocomplete_button_close {
 		display: inline-block;
@@ -212,7 +212,7 @@
 		}
 		.css_autocomplete_button_close:hover {
 			-webkit-filter: brightness(100%);
-			filter:brightness(100%); 
+			filter:brightness(100%);
 			cursor: pointer;
 			opacity: 0.8;
 		}
@@ -239,67 +239,76 @@
 
 
 
-	
+
 
 	// button options to show/hide the options custom position
 		.css_wrap_autocomplete .autocomplete_list_button_options {
 			top: -1px;
 			right: 1px;
 		}
-		
 
 
 
-		
 
-			.filter_fields {
-				text-align: right;
-				padding: 4px;
-				padding-top: 5px;
-				padding-bottom: 5px;
-				}
-				.filter_fields ul {
-					display: flex;
-				}
-				.filter_fields ul > li {
+
+
+		.filter_fields {
+			text-align: right;
+			padding: 4px;
+			padding-top: 5px;
+			padding-bottom: 5px;
+
+			>ul {
+				display: flex;
+				flex-wrap: wrap;
+
+				>li {
 					padding-left: 2px;
-					flex-grow: 1;
+					flex: 1 1 50%;
+
+					>label.label {
+						color: #7c7c7c;
+						text-align: left;
+						width: 100%;
+						padding-left: 0;
+						padding-top: 0.75em;
+					}
+
+					>input {
+						//max-width: 150px;
+						width: 100%;
+					}
 				}
-				.filter_fields ul li .label {
-					margin-right: 10px;
-					color: #7c7c7c;		
-				}
-				.filter_fields label {
-					color: #7c7c7c;		
-				}
-				.filter_fields ul li input {
-					//max-width: 150px;
-					width: 100%;
-				}
-			.filter_fields .search_operators_div {
+			}
+
+			>.search_operators_div {
 				padding-top: 5px;
 				padding-bottom: 5px;
-				
 				margin-left: 10px;
 				margin-top: 4px;
 				display: inline-block;
 			}
 
-			.filter_fields.in_search_mode {
-				/*text-align: left;
-				padding-top: 0px;
-				padding-bottom: 0px;*/
+			>.in_search_mode {
+				// text-align: left;
+				// padding-top: 0px;
+				// padding-bottom: 0px;
 			}
 
+		}//end filter_fields
 
 
-	/* COMPONENT_AUTOCOMPLETE_NEW_ELEMENT. 
+
+
+
+
+	/* COMPONENT_AUTOCOMPLETE_NEW_ELEMENT.
 		Container where components for make new record are loaded
 	------------------------------------------------------------ */
 		.component_autocomplete_new_element {
 			width: 100%;
 			display: table;
-			//margin-top: 15px;		
+			//margin-top: 15px;
 			//background-color: #cecece;
 			padding: 5px;
 			padding-bottom: 20px;
