--- a/lib/dedalo/section/html/section_list.phtml
+++ b/lib/dedalo/section/html/section_list.phtml
@@ -1,17 +1,17 @@
 <?php
-	
-	# VISUALIZADOR HTML	
+
+	# VISUALIZADOR HTML
 	if(SHOW_DEBUG===true) {
 		print "<!-- SECTION LIST [tipo:$tipo modo:$modo] -->";
-	}	
+	}
 
 	print "<div class=\"css_section_wrap wrap_section wrap_section_{$modo} wrap_section_{$tipo}\" ";
 	print "id=\"section_wrap_{$tipo}\" ";
 	print "data-modo=\"$modo\" ";
 	print "data-options=\"\" ";
 	print ">";
-	
-	
+
+
 		# ETIQUETA (LABEL)
 		#print $context;
 		$html_label='';
@@ -33,20 +33,20 @@
 				#print "<script>$('#current_section_label').html('$label').css('right','8px')</script>";
 				break;
 		}
-		
-		
-		
-		
+
+
+
+
 		# CONTENIDO (INPUT)
 		$html_content = "<div class=\"css_section_content section_content_list section_list_rows_content_div\" data-role=\"section_list_rows_content\">";
-		
+
 		switch($permissions) {
-				
+
 			case 0	:
 
 				$html_content .= "<span class=\"css_span_dato sin_acceso\"> ".label::get_label('contenido_no_autorizado')." </span>";
 				break;
-							
+
 			case 1 :
 			case 2 :
 			case 3 :
@@ -56,9 +56,9 @@
 				#
 					$html_buttons  = '';
 					$html_buttons .= "<div class=\"section_buttons_container\">";
-					
+
 						#
-						# PORTAL BUTTONS: SHOW ALL / SHOW FILTERED 
+						# PORTAL BUTTONS: SHOW ALL / SHOW FILTERED
 						# Add buttons for tool_portal mode (modo is 'list' but url request contain var m=tool_portal)
 							/*
 							if ( common::get_request_var('m')=='tool_portal' ) {
@@ -70,7 +70,7 @@
 								#$html_buttons .= "onclick=\"tool_portal.show_more_toggle(this)\" ";
 								$html_buttons .= "onclick=\"search2.show_all(this, true)\" ";
 								#$html_buttons .= "data-search_options_session_key=\"$search_options_session_key\" ";
-								$html_buttons .= "data-mode=\"$current_btn_class\" ";							
+								$html_buttons .= "data-mode=\"$current_btn_class\" ";
 								$html_buttons .= ">";
 								$html_buttons .= "<span>";
 								$html_buttons .= $current_btn_label;
@@ -81,7 +81,7 @@
 								$html_buttons .= "</div>";
 							}//end if (isset($_REQUEST['m']) && $_REQUEST['m']=='tool_portal') {
 							*/
-						
+
 
 						#
 						# SECTION TOP BUTTONS (new, stats, print, etc)
@@ -90,18 +90,18 @@
 								# Skip delete button
 								#if($current_button_modelo_name=='button_stats') continue;
 								foreach($current_ar_button_obj_model as $current_button_obj) {
-									#dump($current_button_obj, ' $current_button_obj ++ '.to_string());								
+									#dump($current_button_obj, ' $current_button_obj ++ '.to_string());
 									# Set buton target tipo
 									$current_button_obj->set_target($tipo);
 									$html_buttons .= $current_button_obj->get_html();
-								}						
+								}
 							}
 
 
 						#
 						# TOOL_EXPORT button for export to csv, etc.
-							if (   true===component_security_tools::is_authorized_tool_for_logged_user('tool_export') 
-								&& defined('DEDALO_TOOL_EXPORT_FOLDER_PATH') 
+							if (   true===component_security_tools::is_authorized_tool_for_logged_user('tool_export')
+								&& defined('DEDALO_TOOL_EXPORT_FOLDER_PATH')
 								&& !$is_process_section) {
 
 								$tool_export = new tool_export($tipo,'button');
@@ -117,17 +117,18 @@
 
 								$tool_diffusion = new tool_diffusion($tipo,'button');
 								$html_buttons  .= $tool_diffusion->get_html();
-							}					
+							}
 
 
 						#
 						# DEBUG BUTTONS
 						# Special debug only buttons
 							$is_global_admin = component_security_administrator::is_global_admin( navigator::get_user_id() );
-							if( (SHOW_DEBUG===true || $is_global_admin) && !isset($_REQUEST['cache_updated']) ) {
-								if( strpos(common::get_request_var('m'), 'tool')!==false ) {
+
+							#if( (SHOW_DEBUG===true || $is_global_admin) && !isset($_REQUEST['cache_updated']) ) {
+								#if( strpos(common::get_request_var('m'), 'tool')!==false ) {
 									# Nothing to show
-								}else{								
+								#}else{
 									if (isset($context->context_name) && $context->context_name=='section_tool') {
 										# Section tool is not updateable
 									}else{
@@ -141,13 +142,13 @@
 										#onclick=\"tool_update_cache.update_cache(this,{'section_tipo':'$this->tipo'})\">".label::get_label('update_cache')." $this->tipo *
 										#</div>";
 									}
-								}
-							}
-						
+								#}
+							#}
+
 
 					$html_buttons .= "</div>";//end section_buttons_container
 					$html_content .= $html_buttons;
-				
+
 
 				#$html_content .= "<div id=\"stats_info\"><!-- Stats content here --></div>";
 
@@ -164,14 +165,14 @@
 					$html_content .= '</div>';
 					if(SHOW_DEBUG===true)
 					$html_content .= '<!-- /RECORDS SEARCH -->';
-					
+
 					#
 					# ROWS_LIST_HTML
 					$rows_list_html  = '';
-					if(SHOW_DEBUG===true) 
+					if(SHOW_DEBUG===true)
 					$rows_list_html .= '<!-- SECTION RECORDS LIST [tipo:$tipo modo:$modo] -->';
 					# Stats loads here
-					$rows_list_html .= '<div class="div_main_list"></div>';					
+					$rows_list_html .= '<div class="div_main_list"></div>';
 					$rows_list_html .= '<div class="css_section_list_wrap wrap_section_'.$tipo.' sgc_edit" id="wrap_'.$tipo.'_'.$modo.'">';
 					# Rows loads here
 					#$rows_list_html .= '<div class="css_section_group_content tab_content wrap_table_rows_list section_records_'.$modo.' wrap_section_records_'.$section_list_tipo.'" data-rol="section_records">';
@@ -180,39 +181,38 @@
 					$rows_list_html .= '<table class="table_rows_list" data-search_options="'.encodeURIComponent($search_options_json).'"></table>';
 					# JS Load first rows
 					$rows_list_html .= '<script>';
-					$rows_list_html .= 'search.first_load_rows(document.getElementById("load_rows_button"));';					
+					$rows_list_html .= 'search.first_load_rows(document.getElementById("load_rows_button"));';
 					$rows_list_html .= '</script>';
 
 					$rows_list_html .= '</div><!-- /css_section_group_content -->';
-					$rows_list_html .= '</div><!-- /css_section_list_wrap -->';					
+					$rows_list_html .= '</div><!-- /css_section_list_wrap -->';
 
 					$html_content .= $rows_list_html;
 
 				# Time machine section button
 				#$html_content .= " $html_section_tm ";
-				break;			
+				break;
 		}
 
 		$html_content .= "</div><!-- /css_section_content -->";
 
-	
-	
-	
+
+
+
 	# PRINT HTML
 	#print $html_label;
 	echo $html_content;
-	
-	
+
+
 	echo "</div>"; //wrap
 	if(SHOW_DEBUG===true) {
 		echo "<!-- /css_section_wrap SECTION [tipo:$tipo modo:$modo] -->"; //wrap;
 	}
-	
+
 
 
 	#
-	# Time machine section button and rows list					
-	echo $time_machine_html;	
-	
-	
-?>
+	# Time machine section button and rows list
+	echo $time_machine_html;
+
+
