Fix search issue with component_iri

--- a/lib/dedalo/component_iri/html/component_iri_search.phtml
+++ b/lib/dedalo/component_iri/html/component_iri_search.phtml
@@ -39,7 +39,7 @@
 					$html_content .= '<li class="input-group">';
 
 					# Input
-					$html_content .= "<input type=\"text\" id=\"{$id_wrapper}_input\" class=\"form-control99 css_iri\" ";
+					$html_content .= "<input type=\"url\" id=\"{$id_wrapper}_input\" class=\"form-control99 css_iri\" ";
 					#$html_content .= "data-tipo=\"{$tipo}\" ";
 					#$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
 					#$html_content .= "data-parent=\"{$parent}\" ";
